welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:3: error: illegal start of simple expression
  if() a%10 == b%10)
     ^lastDigit:11: error: ')' expected but '}' found.
} 
^